# csis-formas

./: .gitignore  .pre-commit-config.yaml  .secrets.toml.example  config.py  pyproject.toml  requirements.txt  settings.toml
application/: __init__.py  dropbox-manager.py  dropbox_manager.py  log_config.py
application/utils/: dashboard_utils.py  plot_utils.py  window_capture_utils.py
application/video_detection/: suspicious_behavior.py
application/window_capture/: public_safety.py
tests/: test_dropbox.py
